--- a/portfolio.css
+++ b/portfolio.css
@@ -6,8 +6,14 @@ nav {
 	padding-top:1.3vh;
 }
 
-a {
+
+#about a {
 	color:#888;
+	text-decoration:none;
+}
+
+#about a:hover {
+	color:gold;
 }
 
 .navbar-right {
@@ -89,6 +95,21 @@ a {
 	font-size:5vw;
 	color:white;
 	text-align:center;
+}
+
+#contactRow a {
+	color:white;
+	text-decoration:none;
+}
+
+#contactRow .btn {
+	background-color:#222;
+	border:1px solid black;
+}
+
+#contactRow .btn:hover {
+	background-color:#444;
+	border:1px solid black;
 }
 
 
